--- a/Landingpage.css
+++ b/Landingpage.css
@@ -33,3 +33,46 @@
 	border-radius: 25px;
 	padding: 1px 1px;
 }
+
+.btn-card {
+	background-color: #2E3F61;
+	color: white;
+	font-weight: bold;
+}
+
+.btn-card:hover{
+	color: white;
+}
+
+.text-card{
+	border-bottom-right-radius: 0px;
+	border-top-right-radius: 0px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+}
+
+.image-card{
+	border-bottom-right-radius: 15px;
+	border-top-right-radius: 15px;
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+.image-card2{
+	border-bottom-right-radius: 0px;
+	border-top-right-radius: 0px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+}
+
+.text-card2{
+	border-bottom-right-radius: 15px;
+	border-top-right-radius: 15px;
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+.border-our{
+	border: 5px solid #2E3F61;
+	border-radius: 15px;
+}
