--- a/customer_dashboard.css
+++ b/customer_dashboard.css
@@ -39,6 +39,42 @@
 	color: white;
 	font-weight: bold;
 }
+.btn-card:hover{
+	color: white;
+}
+
+.text-card{
+	border-bottom-right-radius: 0px;
+	border-top-right-radius: 0px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+}
+
+.image-card{
+	border-bottom-right-radius: 15px;
+	border-top-right-radius: 15px;
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+.image-card2{
+	border-bottom-right-radius: 0px;
+	border-top-right-radius: 0px;
+	border-top-left-radius: 15px;
+	border-bottom-left-radius: 15px;
+}
+
+.text-card2{
+	border-bottom-right-radius: 15px;
+	border-top-right-radius: 15px;
+	border-top-left-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+.border-our{
+	border: 5px solid #2E3F61;
+	border-radius: 15px;
+}
 
 
 
